Adicionado Grupo confome a documentação. Adicionado endpoint profile que mostra o caminho mais curto BFS entre os usuários, adicionado outro endpoint que mostra as informações que o usuário tem para ele próprio. Ajustado o SecurityConfig na questão de Deletar e Editar. Ajustado o application.properties, porque o projeto estava fazendo várias requisições desnecessárias ao banco de dados. Adicionado dependencia necessária para ampliar a autenticação. Ajustado o JwtAuthenticationFilter para tratar melhor a chave JWT dos usuários.